@@ -23,7 +23,7 @@
 PROJECT_NAME           = "Milena"
 PROJECT_NUMBER         = "@PACKAGE_VERSION@"
 PROJECT_BRIEF	       = "An Image Processing Platform"
-PROJECT_LOGO 	       = @top_srcdir@/doc/logo.jpg
+PROJECT_LOGO 	       = @top_srcdir@/doc/images/logo.jpg
 OUTPUT_DIRECTORY       = @builddir@/user-refman.tmp
 CREATE_SUBDIRS         = YES
 OUTPUT_LANGUAGE        = English
