@@ -22,7 +22,7 @@
 PROJECT_NAME           = "Scribo"
 PROJECT_NUMBER         = "User documentation @PACKAGE_VERSION@"
 PROJECT_BRIEF	       = "An Image Processing Platform"
-PROJECT_LOGO 	       = @top_srcdir@/doc/logo.jpg
+PROJECT_LOGO 	       = @top_srcdir@/doc/images/logo.jpg
 OUTPUT_DIRECTORY       = @builddir@/user-refman.tmp
 CREATE_SUBDIRS         = YES
 OUTPUT_LANGUAGE        = English
